syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;pb";  // 当前目录下

package inventory;

service Inventory {
    rpc SetInv (GoodsInvInfo) returns (google.protobuf.Empty);  // 设置库存
    rpc InvDetail (GoodsInvInfo) returns (GoodsInvInfo);        // 获取库存信息
    rpc Sell (SellInfo) returns (google.protobuf.Empty);        // 库存扣减
    rpc Reback (SellInfo) returns (google.protobuf.Empty);      // 归还

}

message GoodsInvInfo {  
    int32 goods_id = 1;
    int32 num = 2;
}

message SellInfo {
    repeated GoodsInvInfo data = 1;
}